# exitium

./: .flake8  .gitignore  CONTRIBUTING.rst  LICENSE  README.rst  noxfile.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/exitium/: __init__.py  cli.py
tests/: test_cli.py
