[tool.poetry]
name = "exitium"
version = "0.1.0"
description = ""
authors = ["Alex Vakhitov <alex.vakhitov@gmail.com>"]

[tool.poetry.scripts]
exitium = "exitium.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
watchdog = "^0.10.2"
flake8 = "^3.8.1"
pytest = "^5.4.2"
pytest-runner = "^5.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
black = "^19.10b0"
flake8-black = "^0.2.0"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
mypy = "^0.770"
pytype = {version = "^2020.5.7", python = "3.7"}
typeguard = "^2.7.1"
flake8-annotations = "^2.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["exitium"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
