[tool.poetry]
name = "exitium"
version = "0.1.0"
description = ""
authors = ["Alex Vakhitov <alex.vakhitov@gmail.com>"]

[tool.poetry.scripts]
exitium = "exitium.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
watchdog = "^0.10.3"
flake8 = "^3.8.3"
pytest = "^6.0.2"
pytest-runner = "^5.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
mypy = "^0.790"
pytype = {version = "^2020.9.24", python = "3.7"}
typeguard = "^2.9.1"
flake8-annotations = "^2.4.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["exitium"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
